--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li *ngFor="let event of events">
+  <li *ngFor="let event of events" (click)="onSelect(event)">
     <span>{{event.name}}</span> {{event.description}}
 </li>
 </ul>
+
+<app-event-detail [event]="selectedEvent"></app-event-detail>
